# lintaider

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  scan-result.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml
scratch/: context_test.py
src/codereview/: __main__.py  cli.py  config.py
src/codereview/ai/: __init__.py  auth.py  base.py  factory.py  provider.py  registry.py
src/codereview/ai/prompts/: user.txt
src/codereview/cli/: __init__.py  fix_handler.py  init_handler.py  main.py  scan_handler.py  ui.py
src/codereview/linters/: __init__.py  bandit.py  base.py  context.py  engine.py  mypy.py  pylint.py  pyright.py  radon.py  result.py  ruff.py  safety.py  semgrep.py  vulture.py
src/lintaider/: __init__.py  __main__.py  config.py
src/lintaider/ai/: __init__.py  auth.py  base.py  provider.py  registry.py
src/lintaider/ai/prompts/: system.txt  user.txt
src/lintaider/cli/: __init__.py  fix_handler.py  init_handler.py  main.py  scan_handler.py  ui.py
src/lintaider/linters/: __init__.py  bandit.py  base.py  config_discovery.py  context.py  engine.py  mypy.py  pylint.py  pyright.py  radon.py  result.py  ruff.py  safety.py  semgrep.py  vulture.py
src/lintaider/linters/configs/default/: .pylintrc  ruff.toml
src/lintaider/linters/configs/test/: .pylintrc  ruff.toml
tests/: __init__.py  test_ai.py  test_ai_auth.py  test_cli.py  test_config.py  test_linters_bandit.py  test_linters_context.py  test_linters_engine.py  test_linters_mypy.py  test_linters_pylint.py  test_linters_pyright.py  test_linters_radon.py  test_linters_result.py  test_linters_ruff.py  test_linters_safety.py  test_linters_semgrep.py  test_linters_vulture.py
