[project]
name = "lintaider"
version = "0.1.0"
description = "A CLI tool for improving the code quality of Python projects."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Leodanis Pozo Ramos", email = "lpozor78@gmail.com" },
]
keywords = ["linter", "ai", "code-review", "automation", "fix", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "bandit>=1.9.4",
    "click>=8.3.1",
    "keyring>=25.6.0",
    "litellm>=1.82.6",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pyright>=1.1.408",
    "python-dotenv>=1.2.2",
    "radon>=6.0.1",
    "requests>=2.33.0",
    "rich>=14.3.3",
    "ruff>=0.15.8",
    "safety>=3.7.0",
    "semgrep>=1.86.0",
    "vulture>=2.16",
]

[project.urls]
Homepage = "https://github.com/lpozo/lintaider"
Repository = "https://github.com/lpozo/lintaider.git"
Issues = "https://github.com/lpozo/lintaider/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "responses>=0.26.0",
    "types-requests>=2.33.0.20260327",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lintaider = "lintaider.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001"]

[tool.ruff.format]
quote-style = "double"

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "too-many-locals",
]

[tool.vulture]
ignore_decorators = ["@main.command", "@click.command", "@click.group"]
ignore_names = [
    "*Linter",
    "get_supported_providers",
    "mock_*",
    "test_*",
    "mocker",
    "tmp_path",
    "AsyncMock",
    "MagicMock",
    "_mock_get_context",
    "MockLinter",
    "process_result",
    "side_effect",
    "build_command",
    "parse_output",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
